<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <!-- User's Image -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:civ_border_color="@color/primary"
            android:elevation="3dp"
            app:civ_border_width="3dp"
            android:src="@drawable/user" />

        <!-- Name Field -->
        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"
            android:background="@drawable/custom_edittext"
            android:padding="15dp"
            android:maxLines="1"
            android:textColorHint="#b3bac8"
            android:textColor="#b3bac8"
            android:layout_marginBottom="8dp"/>

        <!-- Email Field -->
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:background="@drawable/custom_edittext"
            android:padding="15dp"
            android:maxLines="1"
            android:textColorHint="#b3bac8"
            android:textColor="#b3bac8"
            android:layout_marginBottom="8dp"/>
        <!-- Password Field -->
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/custom_edittext"
            android:padding="15dp"
            android:textColor="#b3bac8"

            android:maxLines="1"
            android:textColorHint="#b3bac8"
            android:layout_marginBottom="8dp"/>

        <!-- Confirm Password Field -->
        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:background="@drawable/custom_edittext"
            android:padding="15dp"
            android:textColorHint="#b3bac8"
            android:textColor="#b3bac8"
            />


        <!-- Register Button -->
        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#76ABAE"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/register"/>

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#2b2d30"
            android:layout_marginTop="20dp"
            android:text="@string/already_registered_login" />


    </LinearLayout>

</FrameLayout>