<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_margin="10dp"
                android:text="Ongoing Elections" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewActiveElections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" />


                <GridLayout
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/gridLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:columnCount="1"
                    android:rowCount="2"
                  >
                    <!-- Card 1 -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/showResult"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_margin="8dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp"
                        android:layout_gravity="fill_horizontal"
                        android:backgroundTint="@color/primary"
                 >

                        <!-- Card content -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:padding="16dp">

                            <TextView
                                android:id="@+id/card1Title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/show_results"
                                android:textSize="20sp"
                                android:textColor="@color/white"
                                android:gravity="center"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <!-- Card 2 -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/viewCandidates"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"

                        android:layout_margin="8dp"
                        app:cardCornerRadius="8dp"
                        android:layout_gravity="fill_horizontal"
                        android:backgroundTint="#aaafbc"
                        app:cardElevation="4dp"
                  >

                        <!-- Card content -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:padding="16dp">

                            <TextView
                                android:id="@+id/card2Title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/view_candidates"
                                android:gravity="center"
                                android:textSize="20sp"
                                android:textColor="@color/white"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <!-- Card 3 -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/register"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_margin="8dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp"

                        android:layout_gravity="fill_horizontal"

                        android:backgroundTint="@color/primary"
                >

                        <!-- Card content -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/card3Title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Register to Vote"
                                android:gravity="center"
                                android:textSize="20sp"
                                android:textColor="@color/white"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <!-- Card 4 -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/VotingFaq"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_margin="8dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp"
                        android:layout_gravity="fill_horizontal"
                        android:backgroundTint="#aaafbc"
                     >

                        <!-- Card content -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:padding="16dp">

                            <TextView
                                android:id="@+id/card4Title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/voting_faq_s"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:gravity="center"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </GridLayout>
            </LinearLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="false"
        app:headerLayout="@layout/headers_voters"
        app:menu="@menu/voters_menu" />

</androidx.drawerlayout.widget.DrawerLayout>

